--- a/index.html
+++ b/index.html
@@ -8,6 +8,28 @@
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
+  <header>
+    <nav>
+      <ul>
+        <li><a href="home">Início</a></li>
+        <li><a href="#services"></a>Serviços</a></li>
+        <li><a href="#portfolio"></a>Portfolio</a></li>
+        <li><a href="#contact"></a>Contato</a></li>
+      </ul>
+    </nav>
+  </header>
+  <section class="banner">
+    <div class="cover-box">
+      <div class="cover full-bg" style="background-image: url('https://gthemes.github.io/gt-startup/assets/img/bg.jpg')">
+        <div class="center-flex">
+          <div class="">
+            <h1>GainTime</h1>
+            <h2>Escrevam aqui o texto que quiserem</h2>
+          </div>
+        </div>
 
+      </div>
+    </div>
+  </section>
 </body>
 </html>
