Fim da capacitação

--- a/index.html
+++ b/index.html
@@ -22,12 +22,42 @@
     <div class="cover-box">
       <div class="cover full-bg" style="background-image: url('https://gthemes.github.io/gt-startup/assets/img/bg.jpg')">
         <div class="center-flex">
-          <div class="">
+          <div class="center">
             <h1>GainTime</h1>
             <h2>Escrevam aqui o texto que quiserem</h2>
           </div>
         </div>
 
+      </div>
+    </div>
+  </section>
+
+  <section>
+    <div class="center">
+      <h1>Serviços</h1>
+    </div>
+    <div class="flex-box">
+
+      <div class="col">
+        <div class="circle">
+          <img src="https://gthemes.github.io/gt-startup/assets/img/service_1.svg" alt="">
+        </div>
+        <h2>Title</h2>
+        <p>loream askd sa amsdm askdj askmdskamdksam daks dkssad lasd</p>
+      </div>
+      <div class="col">
+        <div class="circle">
+          <img src="https://gthemes.github.io/gt-startup/assets/img/service_1.svg" alt="">
+        </div>
+        <h2>Title</h2>
+        <p>loream askd sa amsdm askdj askmdskamdksam daks dkssad lasd</p>
+      </div>
+      <div class="col">
+        <div class="circle">
+          <img src="https://gthemes.github.io/gt-startup/assets/img/service_1.svg" alt="">
+        </div>
+        <h2>Title</h2>
+        <p>loream askd sa amsdm askdj askmdskamdksam daks dkssad lasd</p>
       </div>
     </div>
   </section>
